// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Radio checked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

<label
  checked=""
  class="c0"
>
  <input
    aria-checked="true"
    checked=""
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Radio disabled 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.dvXODT:hover .c1,
.dvXODT > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.dvXODT:hover > input:not(:checked):not(:disabled) ~ .c1,
.dvXODT:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.dvXODT:active > input:not(:checked):not(:disabled) ~ .c1,
.dvXODT > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.dvXODT > input:disabled ~ .c1,
.dvXODT > input:disabled ~ .c3 {
  opacity: 0.5;
}

.dvXODT > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c0 {
  display: inline-block;
  cursor: pointer;
  cursor: not-allowed;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.c0:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
  disabled=""
>
  <input
    aria-checked="false"
    disabled=""
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Radio unchecked 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

<label
  class="c0"
>
  <input
    aria-checked="false"
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    
  </span>
</label>
`;

exports[`Snapshots Render children 1`] = `
.c2 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  padding: 2px;
  border: 1px solid #B4B4B4;
  margin-right: 0.2em;
  border-radius: 50%;
  vertical-align: middle;
}

.c4 {
  display: inline-block;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c0 input {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  margin: -1px;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 span {
  vertical-align: middle;
}

.c0:hover .c1,
.c0 > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.c0:hover > input:not(:checked):not(:disabled) ~ .c1,
.c0:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.c0:active > input:not(:checked):not(:disabled) ~ .c1,
.c0 > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c0 > input:disabled ~ .c1,
.c0 > input:disabled ~ .c3 {
  opacity: 0.5;
}

.c0 > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.cljgdb:hover .c1,
.cljgdb > input:focus ~ .c1 {
  border: 1px solid #B4B4B4;
}

.cljgdb:hover > input:not(:checked):not(:disabled) ~ .c1,
.cljgdb:active > input:not(:checked):not(:disabled) ~ .c1 {
  border: 1px solid #303030;
}

.cljgdb:active > input:not(:checked):not(:disabled) ~ .c1,
.cljgdb > input:focus:not(:checked):not(:disabled) ~ .c1 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.cljgdb > input:disabled ~ .c1,
.cljgdb > input:disabled ~ .c3 {
  opacity: 0.5;
}

.cljgdb > input:checked ~ .c1:before {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  background: #F16622;
  border-radius: 50%;
}

.cljgdb:hover .c1 {
  box-shadow: none;
}

<label
  class="c0"
>
  <input
    aria-checked="false"
    name="demo"
    type="radio"
    value="blah"
  >
    
  </input>
  <span
    class="c1 c2"
  >
    
  </span>
   
  <span
    class="c3 c4"
  >
    Hello
  </span>
</label>
`;
